go-file-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: file-store
  name: file-store
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: file-store
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: file-store
    spec:
      containers:
      - args: ["./main"]
        image: xjyplayer/file-store:1.0.1
        imagePullPolicy: IfNotPresent
        name: file-store
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /apps/filestore-server
          subPath: filestore-server
          name: file-store-pvc
        - mountPath: /apps/log
          subPath: log
          name: file-store-pvc
        workingDir: /apps/filestore-server
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: file-store-pvc
        persistentVolumeClaim:
          claimName: app-pvc-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: file-store
  name: file-store
spec:
  ports:
  - name: file-store-server
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: file-store
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: file-store-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: file.store.52db.club
    http:
      paths:
      - backend:
          serviceName: file-store
          servicePort: 80
        path: /
  tls:
   - secretName: file-store-imroc-io-tls
     hosts:
       - file.store.52db.club
